# handler/request/hello_request.go
@@ -1,7 +1,8 @@
 package request
 
+// HelloRequest represents the expected structure of a hello request
 type HelloRequest struct {
 	Name  string `json:"name" example:"John Doe"`
 	Age   int    `json:"age" example:"27"`
 	Email string `json:"email" example:"john.doe@example.com"`
-} //@name HelloRequest
+}
