# handler/request/login_request.go
@@ -1,0 +1,7 @@
+package request
+
+// LoginRequest represents the expected structure of a login request
+type LoginRequest struct {
+	Email    string `json:"email" binding:"required" validate:"required,email" example:"user@example.com"`
+	Password string `json:"password" binding:"required" validate:"required,min=6,max=100" example:"password"`
+}
